--- a/css/birds.css
+++ b/css/birds.css
@@ -286,6 +286,9 @@ h5{
 	top:-200px;
 	z-index: 5;
 }
+#sound, #pause{
+	z-index: 9;
+}
 .score{
 	position: absolute;
 	left: 80%; 
@@ -318,23 +321,19 @@ h5{
 
 
 #modal_form {
-	width: 800px; 
-	height: 400px; /* Размеры должны быть фиксированы */
+	width: 99%;
+	height: 400px; 
 	border-radius: 5px;
 	border: 3px #000 solid;
 	background: #fff;
-	position: fixed; /* чтобы окно было в видимой зоне в любом месте */
-	top: 30%; /* отступаем сверху 45%, остальные 5% подвинет скрипт */
-	left: 30%; /* половина экрана слева */
-	margin-top: -150px;
-	margin-left: -150px; 
-	display: none; /* в обычbном состоянии окна не должно быть */
-	opacity: 0; /* полностью прозрачно для анимирования */
-	z-index: 10; /* окно должно быть наиболее большем слое */
+	position: absolute;
+	left: 0px;
+	display: none; 
+	opacity: 0;
+	z-index: 10; 
 	padding: 20px 10px;
 
 }
-/* Кнопка закрыть для тех кто в танке) */
 #modal_form #modal_close {
 	width: 21px;
 	height: 21px;
@@ -344,18 +343,18 @@ h5{
 	cursor: pointer;
 	display: block;
 }
-/* Подложка */
+
 #overlay {
-	z-index: 9; /* подложка должна быть выше слоев элементов сайта, но ниже слоя модального окна */
-	position: fixed; /* всегда перекрывает весь сайт */
-	background-color: #000; /* черная */
-	opacity: 0.8; /* но немного прозрачна */
+	z-index: 9;
+	position: fixed;
+	background-color: #000; 
+	opacity: 0.8; 
 	width: 100%; 
-	height: 100%; /* размером во весь экран */
+	height: 100%; 
 	top: 0; 
-	left: 0; /* сверху и слева 0, обязательные свойства! */
+	left: 0; 
 	cursor: pointer;
-	display: none; /* в обычном состоянии её нет) */
+	display: none; 
 }
 form h3{
 	color: rgb(212,75,56);
